# sync_server_project

./: .env  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  architecture.txt  config.py  exceptions.py  loader.py  main.py  pyproject.toml  requirements.txt
cloud_storage/: yandex_disk.py
file_monitoring/: monitoring.py
src/: config.py  exceptions.py  loader.py  main.py
src/cloud/: yandex_disk.py
src/file_monitoring/: monitoring.py
tests/: test_config.py  test_file_monitoring.py  test_main.py  test_yandex_disk.py
