[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_synchronization_server_project"
version = "0.1.0"
description = "Программа для синхронизации файлов между локальной файловой системой и Яндекс.Диском."
authors = [
    { name = "Anastasia Gogokhiya", email = "nastasyaogokhiya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.5.0",
    "mypy",
    "types-requests",

]

[tool.coverage.run]
source = ['.']
omit = [
    '*/tests/*',
    '*/venv/*',
    '*/__pycache__/*/',]

[project.scripts]
sync-files = "src.main:main"

[tool.setuptools]
packages = { include = ["src", "src.*"] }


# pip install -e .
# pip install -e .[dev]